ruv4 adjustment added

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,3 +8,9 @@ URL: https://github.com/dcgerard/vicar
 BugReports: http://github.com/dcgerard/vicar/issues
 License: GPL-3
 LazyData: TRUE
+RoxygenNote: 5.0.1
+Imports: ruv,
+    SQUAREM,
+    limma,
+    sva,
+    assertthat
