added a tentative version of vruv2

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,4 +5,6 @@ export(clean_my_stats)
 export(pca_naive)
 export(smell_my_p)
 export(smell_my_stats)
-export(vicarius_ruv4)
+export(tregress_em)
+export(vruv2)
+export(vruv4)
