--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,9 @@ env:
 
 before_install:
   - Rscript -e "source('https://bioconductor.org/biocLite.R'); biocLite(c('limma', 'sva'))"
+
+r_github_packages:
+  - jimhester/covr
+
+after_success:
+  - Rscript -e 'covr::coveralls()'
