added a new factor analysis that does not work too well, but might be used as starting values for a better FA

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(ash_ruv4)
 export(clean_my_p)
 export(clean_my_stats)
 export(pca_naive)
+export(pca_ruv2)
 export(rmixnorm)
 export(rnormalmix)
 export(smell_my_p)
