--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,10 +5,12 @@ export(clean_my_p)
 export(clean_my_stats)
 export(pca_naive)
 export(pca_ruv2)
+export(qmle_ruv2)
 export(rmixnorm)
 export(rnormalmix)
 export(smell_my_p)
 export(smell_my_stats)
 export(tregress_em)
 export(vruv2)
+export(vruv2_old)
 export(vruv4)
