--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,9 +3,11 @@
 export(ash_ruv4)
 export(clean_my_p)
 export(clean_my_stats)
+export(pca_2step)
 export(pca_naive)
 export(pca_ruv2)
 export(qmle_ruv2)
+export(qmle_ruv2_lambda_grid)
 export(rmixnorm)
 export(rnormalmix)
 export(smell_my_p)
