added ruv3 ability

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,8 @@ export(qmle_ruv2)
 export(qmle_ruv2_lambda_grid)
 export(rmixnorm)
 export(rnormalmix)
+export(ruv3)
+export(ruvimpute)
 export(smell_my_p)
 export(smell_my_stats)
 export(tregress_em)
