started ruvb and ruvimpute

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,9 +12,11 @@ export(qmle_ruv2_lambda_grid)
 export(rmixnorm)
 export(rnormalmix)
 export(ruv3)
+export(ruvb)
 export(ruvimpute)
 export(smell_my_p)
 export(smell_my_stats)
+export(softimpute_wrapper)
 export(tregress_em)
 export(vruv2)
 export(vruv2_old)
