added a proof of concept function for connecting ruvimpute with ruv2, ruv3, and ruv4

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(ash_ruv4)
 export(clean_my_p)
 export(clean_my_stats)
 export(hard_impute)
+export(impute_ruv_reproduce)
 export(knn_wrapper)
 export(missforest_wrapper)
 export(pca_2step)
