--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(ash_ruv2)
 export(ash_ruv4)
 export(clean_my_p)
 export(clean_my_stats)
+export(em_miss)
 export(hard_impute)
 export(impute_ruv_reproduce)
 export(knn_wrapper)
