--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(ash_ruv4)
 export(clean_my_p)
 export(clean_my_stats)
 export(em_miss)
+export(fa_ml)
 export(hard_impute)
 export(impute_ruv_reproduce)
 export(knn_wrapper)
