added ruvem, a friendly version for ruvimpute when using em with missing block

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ export(rmixnorm)
 export(rnormalmix)
 export(ruv3)
 export(ruvb)
+export(ruvem)
 export(ruvimpute)
 export(smell_my_p)
 export(smell_my_stats)
