--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(clean_my_p)
 export(clean_my_stats)
 export(em_miss)
 export(fa_ml)
+export(gdfa)
 export(hard_impute)
 export(impute_ruv_reproduce)
 export(knn_wrapper)
