--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,13 +3,12 @@
 export(ash_ruv2)
 export(ash_ruv4)
 export(bfa_gd_gibbs)
+export(bfa_gs)
 export(bfl)
-export(bsvd)
 export(clean_my_p)
 export(clean_my_stats)
 export(em_miss)
 export(fa_ml)
-export(gdfa)
 export(hard_impute)
 export(impute_ruv_reproduce)
 export(knn_wrapper)
