--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,8 @@ export(ash_ruv2)
 export(ash_ruv4)
 export(bfa_gd_gibbs)
 export(bfa_gs)
+export(bfa_gs_linked)
+export(bfa_gs_linked_gibbs)
 export(bfl)
 export(clean_my_p)
 export(clean_my_stats)
