--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,9 +12,11 @@ export(clean_my_stats)
 export(em_miss)
 export(fa_ml)
 export(hard_impute)
+export(hier_fun)
 export(impute_ruv_reproduce)
 export(knn_wrapper)
 export(missforest_wrapper)
+export(normal_prior)
 export(pca_2step)
 export(pca_naive)
 export(pca_ruv2)
