added mouthwash, and finished normals mixtures em

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,8 @@ export(hier_fun)
 export(impute_ruv_reproduce)
 export(knn_wrapper)
 export(missforest_wrapper)
+export(mouthwash)
+export(mouthwash_second_step)
 export(normal_prior)
 export(pca_2step)
 export(pca_naive)
