--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: vicar
 Type: Package
 Title: Variance Inflation for Confounder Adjustment in Regression
-Version: 0.1.3
+Version: 0.1.4
 Authors@R: person("David", "Gerard", email = "dcgerard@uchicago.edu", role = c("aut", "cre"))
 Description: Calibrates popular confounder adjustment methods.
 URL: https://github.com/dcgerard/vicar
@@ -32,4 +32,5 @@ Imports: ruv,
     RcppProgress,
     ashr
 Suggests: testthat,
-    leapp
+    leapp,
+    Rmosek
