--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ cache: packages
 
 env:
   global:
-    - _R_CHECK_FORCE_SUGGESTS_=FALSE
+    - _R_CHECK_FORCE_SUGGESTS_="FALSE"
 
 before_install:
   - Rscript -e "source('https://bioconductor.org/biocLite.R'); biocLite(c('limma', 'sva', 'impute'))"
