--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,8 @@ language: r
 cache: packages
 
 env:
-  - _R_CHECK_FORCE_SUGGESTS_=false
+  global:
+    - _R_CHECK_FORCE_SUGGESTS_=false
 
 before_install:
   - Rscript -e "source('https://bioconductor.org/biocLite.R'); biocLite(c('limma', 'sva', 'impute'))"
