--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ env:
 
 before_install:
   - Rscript -e "source('https://bioconductor.org/biocLite.R'); biocLite(c('limma', 'sva', 'impute'))"
-  - Rscript -e "install.packages("Rmosek", type="source", repos="http://download.mosek.com/R/7")"
+  - Rscript -e "install.packages('Rmosek', type='source', repos='http://download.mosek.com/R/7')"
 
 r_github_packages:
   - jimhester/covr
