--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,14 @@
 language: r
+  - 3.1
 
 cache: packages
 
 env:
   global:
-    - _R_CHECK_FORCE_SUGGESTS_=false
+    - _R_CHECK_FORCE_SUGGESTS_="FALSE"
 
 before_install:
   - Rscript -e "source('https://bioconductor.org/biocLite.R'); biocLite(c('limma', 'sva', 'impute'))"
-  - Rscript -e "install.packages('Rmosek', type='source', repos='http://download.mosek.com/R/7')"
 
 r_github_packages:
   - jimhester/covr
