--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,14 @@
 language: r
 
 r:
-  - oldrel
+  - 3.2
+
 
 cache: packages
 
 env:
   global:
-    - _R_CHECK_FORCE_SUGGESTS_="FALSE"
+    - _R_CHECK_FORCE_SUGGESTS_=FALSE
 
 before_install:
   - Rscript -e "source('http://bioconductor.org/biocLite.R'); biocLite(c('limma', 'sva', 'impute'))"
