--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,8 @@ env:
   global:
     - _R_CHECK_FORCE_SUGGESTS_=FALSE
 
-before_install:
-  - Rscript -e "source('http://bioconductor.org/biocLite.R'); biocLite(c('limma', 'sva', 'impute'))"
+
+bioc_packages: limma sva impute
 
 r_github_packages:
   - jimhester/covr
