--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: vicar
 Type: Package
-Title: Variance Inflation for Confounder Adjustment in Regression
+Title: Methods for Confounder Adjustment in Regression
 Version: 0.1.4
 Authors@R: person("David", "Gerard", email = "dcgerard@uchicago.edu", role = c("aut", "cre"))
 Description: Calibrates popular confounder adjustment methods.
