--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,9 @@ env:
   global:
     - _R_CHECK_FORCE_SUGGESTS_=FALSE
 
-bioc_packages: list("limma", "sva", "impute")
+bioc_packages: limma
+bioc_packages: sva
+bioc_packages: impute
 
 r_github_packages:
   - jimhester/covr
