moved some packages from imports to suggests

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,7 +9,7 @@ BugReports: http://github.com/dcgerard/vicar/issues
 License: GPL-3
 LazyData: TRUE
 RoxygenNote: 5.0.1
-Remotes: github::stephens999/ashr@general
+Remotes: github::stephens999/ashr
 LinkingTo: Rcpp,
     RcppArmadillo,
     RcppProgress
@@ -20,16 +20,16 @@ Imports: ruv,
     assertthat,
     MASS,
     cate,
-    missForest,
-    impute,
-    softImpute,
     irlba,
     coda,
-    rstiefel,
     bfa,
     Rcpp,
     RcppArmadillo,
     RcppProgress,
     ashr
 Suggests: testthat,
+    impute,
+    softImpute,
+    rstiefel,
+    missForest,
     leapp
