--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,7 +13,7 @@ install:
 # Adapt as necessary starting from here
 
 build_script:
-  - travis-tool.sh install_bioc limma sva impute
+  - travis-tool.sh install_bioc limma sva impute qvalue
   - travis-tool.sh install_deps
 
 test_script:
