adds tester functions for fa_func and adds vignette for supplying customized fa_funcs

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -41,4 +41,8 @@ Suggests: testthat,
     missForest,
     leapp,
     covr,
-    qvalue
+    qvalue,
+    knitr,
+    rmarkdown,
+    ggplot2
+VignetteBuilder: knitr
