--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,8 @@ export(clean_my_p)
 export(clean_my_stats)
 export(em_miss)
 export(fa_ml)
+export(fa_tester)
+export(fa_tester_ruvb)
 export(hard_impute)
 export(hier_fun)
 export(impute_ruv_reproduce)
