--- a/.travis.yml
+++ b/.travis.yml
@@ -17,3 +17,7 @@ r_github_packages:
 after_success:
   - Rscript -e 'covr::coveralls()'
   - Rscript -e 'covr::codecov()'
+
+branches:
+  only:
+  - master
