--- a/appveyor.yml
+++ b/appveyor.yml
@@ -12,9 +12,35 @@ install:
 
 # Adapt as necessary starting from here
 
+# check suggested packges (from https://github.com/abichat/yatah/blob/dev/appveyor.yml)
+environment:
+  global:
+    # r-appveyor will fail to install some packages (e.g. XML) unless we
+    # specifically request binary packages.
+    # https://github.com/krlmlr/r-appveyor/issues/133
+    # https://github.com/krlmlr/r-appveyor/issues/138
+    # Note that enabling this can cause R-devel builds to fail.
+    # PKGTYPE: win.binary
+    BIOC_USE_DEVEL: "FALSE"
+    GCC_PATH: mingw_64
+    # The more powerful `x64` image is now default over `i386`.
+    R_ARCH: x64
+    # Need to enable when installing GitHub dependency packages.
+    USE_RTOOLS: true
+  # Set the build matrix to use R-devel, otherwise Bioconductor checks will fail
+  # because the image now expects BioC 3.9 on R 3.6.
+  # https://github.com/krlmlr/r-appveyor/issues/144
+  matrix:
+    - configuration: 3.5
+      R_VERSION: 3.5.3
+    - configuration: 3.6
+      R_VERSION: 3.6.0
+
 build_script:
   - travis-tool.sh install_bioc limma sva impute qvalue
-  - travis-tool.sh install_deps
+  - travis-tool.sh install_bioc_deps
+  # install_deps is breaking
+  # - travis-tool.sh install_deps
 
 test_script:
   - travis-tool.sh run_tests
