--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -68,6 +68,8 @@ jobs:
         run: |
           remotes::install_deps(dependencies = TRUE)
           remotes::install_cran("rcmdcheck")
+          install.packages("BiocManager")
+          BiocManager::install(c("limma", "sva", "impute"))
         shell: Rscript {0}
 
       - name: Check
